fixed on mobile. its pretty fun actiualy

--- a/app/less/main.less
+++ b/app/less/main.less
@@ -31,14 +31,21 @@ body {
 
 }
 
-.score {
+.score, .time {
   position: absolute;
   z-index: 1000;
   color: @gray1;
-  font-size: 1rem;
-  left: 0.5rem;
-  bottom: -1.5rem;
+  font-size: 3rem;
+  width: 480px;
+  left: 0;
+  right: 0;
+  margin: auto;
+  top: 31rem;
   pointer-events: none;
+}
+.time {
+  text-align: right;
+  font-size: 3rem;
 }
 
 h1 {
@@ -73,6 +80,7 @@ square {
   }
   &[selected="true"] {
     transform: translateZ(10px) scale(1.10);
+    -webkit-transform: translateZ(10px) scale(1.10);
     z-index: 100;
   }
 
